@@ -169,5 +169,19 @@ noMove: false
 # Possible values: [true, false]
 singleOwner: false
 
+#This is used to determine the maximum number of warps that a team can set 
+# - If this is set to 0 teams will not be allowed any warps (though it is recommended you do that through permissions instead of the config option) 
+# - If this is set to -1 there will be no limit on the number of warps
+#
+# Possible values: [Any positive whole number, 0, -1]
+maxWarps: 2
+
+# This is used to determine if a warp is allowed to have a password set which can be used to limit usage across the team
+# - If this is true, a password can be set for a warp, so only users with that password can teleport to it
+# 
+# Possible values: [true, false]
+#
+allowPassword: true
+
 # Do not edit this value, this is used to check the config is up to date with the lastest version of the plugin (if it is not, it will be automatically updated)
 version: 6
